--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<h2>Военно-патриотический клуб "Патриот"</h2>
 	<h3>Место нахождения: п.Двуреченск, МАОУ СОШ №3</h3>
 	<h3>Руководитель клуба: Хабибов Виталий Анатольевич</h3>
-	<img src="Проект ВЕБ/ВА1.jpg" alt="Хабибов В.А." width="275px" height="410px">
+	<img src="IMG/ВА1.jpg" alt="Хабибов В.А." width="275px" height="410px">
 	<h3>Эмблема клуба:</h3>
-	<img src="Проект ВЕБ/эп.jpg" alt="Эмблема Патриот" width="256px" height="181px">
+	<img src="IMG/эп.jpg" alt="Эмблема Патриот" width="256px" height="181px">
 	<h3>Краткое описание клуба:</h3>
 <p>Клуб ВПК "Патриот" основан в стенах школы на основе двух учебных классов - 7"К" и 8"К"(на момент 2023-2024 учебных годов). Отличительными особенностями данных классов является "К"- от слова "Кадетский", что показывает престиж и завышенные требования к ученикам данных классов, необходимость соблюдения ими определенного дресс-кода, отлечающего их от остальных обучающихся в данном учебном заведении, следования определенным правилам жизнедеятельности и завышенным дисциплинарным требованиям.<br>
 Основными видами деятельности являются: военные сборы, сплавы, поездки на туристические базы и турестические слёты, участие в районных соревнованиях по спортивному туризму, военно-тактической стрельбе.</p>
-<img src="Проект ВЕБ/патриот1.jpg" alt="Патриот" width="1400px" height="850px">
+<img src="IMG/патриот1.jpg" alt="Патриот" width="1400px" height="850px">
 	<body>
 		<head>
 		</head>
